Fix spacing on author widget

--- a/app/assets/stylesheets/api/stories.scss
+++ b/app/assets/stylesheets/api/stories.scss
@@ -119,7 +119,7 @@
 
 .story .authorWidget {
   margin-top: 20px;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-family: "Titillium Web";
   font-size: 24px;
   text-align: center;
